--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Memedown</title>
   <!-- <link rel=stylesheet href="../codemirror/doc/docs.css"> -->
-  <link rel="stylesheet" href="./codemirror.css">
+  <link rel="stylesheet" href="./codemirror/codemirror.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" />
   <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
