Addded UI elements for clearing selected file

--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,7 @@
           </div>
           <div style="margin-top:1rem;">
             <span>
+              <button type="button" class="btn btn-light btn-lg" id="fileclear">Clear File Selection</button>
               <button type="button" class="btn btn-light btn-lg" id="upload">Meme-ify</button>
             </span>
           </div>
