Update README + fix typo in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -124,7 +124,7 @@
         </div>
         <div class="modal-body">
           The first thing you'll need to do is upload an image (JPG or PNG) into the webpage. This image will act as
-          your meme background.
+          your meme background. If you are including an image url, then you can skip this step.
           <br />
           The MemeDown interpreter is very strict in the range of values for its inputs. Any invalid inputs will
           result in a parse error, unless otherwise noted.
