--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   <script src="./codemirror/xml-fold.js"></script>
   <script src="./codemirror/xml.js"></script>
   <script src="./codemirror/placeholder.js"></script>
-  <link rel="stylesheet" href="./style.css" />
+  <link rel="stylesheet" href="./css/style.css" />
 
   <script type="text/javascript" src="./script.js">
   </script>
@@ -59,7 +59,7 @@
         <div class="text-center">
           <p class="shadow" style="margin-top: 1%;">The output box is a 600px by 600px square so the aspect ratio
             of the output image may be off</p>
-          <img src="./thinking.jpg" width="416" height="235">
+          <img src="./images/thinking.jpg" width="416" height="235">
         </div>
       </div>
       <!--Outputs-->
@@ -229,10 +229,10 @@
         </div>
         <div class="modal-body">
           Below is an example with a single text that exercises each of the different options.
-          With the following <a href='./ex1_temp.jpg' download="exampletemplate.jpg">base template</a> (dimensions are
+          With the following <a href='./images/ex1_temp.jpg' download="exampletemplate.jpg">base template</a> (dimensions are
           540px by 700px) <br /><br />
           <div class="text-center">
-            <img src="ex1_temp.jpg" height="233" width="180">
+            <img src="./images/ex1_temp.jpg" height="233" width="180">
           </div>
           <br />
           <div style="margin-left: 15%;margin-right: 15%;">
@@ -244,7 +244,7 @@
           <br />
           This code will produce the following image: <br />
           <div class="text-center">
-            <img src="ex1.png" height="233" width="180">
+            <img src="./images/ex1.png" height="233" width="180">
           </div>
           <br />
           The following code will also produce a similar image.
