Forgot to reset label after file clear

--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
           <div class="custom-file">
             <input type="file" class="custom-file-input" id="img" accept="image/*"
               style="background-color: #002c5a !important;">
-            <label class="custom-file-label" for="img">Select an image</label>
+            <label class="custom-file-label" for="img" id="imglabel">Select an image</label>
           </div>
           <div style="margin-top:1%;">
             <span>
